--- a/playbook/site.yml
+++ b/playbook/site.yml
@@ -8,29 +8,60 @@
         name: clickhouse-server
         state: restarted
   tasks:
-    - block:
+    - name: Configure and Install Clickhouse
+      block:
         - name: Get clickhouse distrib
           ansible.builtin.get_url:
             url: "https://packages.clickhouse.com/rpm/stable/{{ item }}-{{ clickhouse_version }}.noarch.rpm"
             dest: "./{{ item }}-{{ clickhouse_version }}.rpm"
+            mode: "0755"
           with_items: "{{ clickhouse_packages }}"
       rescue:
         - name: Get clickhouse distrib
           ansible.builtin.get_url:
             url: "https://packages.clickhouse.com/rpm/stable/clickhouse-common-static-{{ clickhouse_version }}.x86_64.rpm"
             dest: "./clickhouse-common-static-{{ clickhouse_version }}.rpm"
+            mode: "0755"
     - name: Install clickhouse packages
-      become: true
-      ansible.builtin.yum:
+      ansible.builtin.dnf:
         name:
           - clickhouse-common-static-{{ clickhouse_version }}.rpm
           - clickhouse-client-{{ clickhouse_version }}.rpm
           - clickhouse-server-{{ clickhouse_version }}.rpm
+        state: present
+      become: true
       notify: Start clickhouse service
     - name: Flush handlers
-      meta: flush_handlers
+      ansible.builtin.meta: flush_handlers
     - name: Create database
       ansible.builtin.command: "clickhouse-client -q 'create database logs;'"
       register: create_db
-      failed_when: create_db.rc != 0 and create_db.rc !=82
+      failed_when: create_db.rc != 0 and create_db.rc != 82
       changed_when: create_db.rc == 0
+- name: Install Vector
+  hosts: vector
+  handlers:
+    - name: Start Vector service
+      become: true
+      ansible.builtin.service:
+        name: vector
+        state: restarted
+  tasks:
+    - name: Configure and Install Vector
+      block:
+        - name: Get Vector distrib
+          ansible.builtin.get_url:
+            url: "https://packages.timber.io/vector/{{ vector_release }}/vector-{{ vector_version }}.{{ ansible_architecture }}.rpm"
+            dest: "./vector-{{ vector_version }}.{{ ansible_architecture }}.rpm"
+            mode: "0755"
+        - name: Install Vector packages
+          become: true
+          ansible.builtin.dnf:
+            name: vector-{{ vector_version }}.{{ ansible_architecture }}.rpm
+          notify: Start vector service
+        - name: Copy config
+          ansible.builtin.template:
+            src: "{{ vector_template }}"
+            dest: "{{ vector_config_file }}"
+            mode: "0644"
+          notify: Start Vector service
