--- a/playbook/group_vars/clickhouse/vars.yml
+++ b/playbook/group_vars/clickhouse/vars.yml
@@ -1,6 +1,8 @@
 ---
-clickhouse_version: "22.3.3.44"
-clickhouse_packages:
-  - clickhouse-client
-  - clickhouse-server
-  - clickhouse-common-static
+clickhouse_version: "22.6.6.16"
+# clickhouse_packages:
+#   - clickhouse-client
+#   - clickhouse-server
+#   - clickhouse-common-static
+
+repo_click: "https://packages.clickhouse.com/deb/pool/main/c"
