--- a/playbook/group_vars/vector/vars.yml
+++ b/playbook/group_vars/vector/vars.yml
@@ -1,5 +1,5 @@
 ---
-vector_version: "0.21.1-1"
-vector_release: "0.21.1"
+vector_version: "latest-1"
+vector_release: "latest"
 vector_config_file: /etc/vector/vector.yaml
 vector_template: ./template/vector.yaml.j2
