--- a/playbook/inventory/prod.yml
+++ b/playbook/inventory/prod.yml
@@ -1,18 +1,18 @@
 ---
-ansible_python_interpreter: /usr/bin/python3
+#ansible_python_interpreter: /usr/bin/python3
 clickhouse:
   hosts:
     clickhouse-01:
       ansible_host: 192.168.1.202
-      ansible_user: ansi
-      ansible_password: "1111"
-      ansible_become_user: ansi
-      ansible_become_pass: "1111"
+      # ansible_user: ansi
+      # ansible_password: "1111"
+      # ansible_become_user: ansi
+      # ansible_become_pass: "1111"
 vector:
   hosts:
     vector-01:
       ansible_host: 192.168.1.202
-      ansible_user: ansi
-      ansible_password: "1111"
-      ansible_become_user: ansi
-      ansible_become_pass: "1111"
+      # ansible_user: ansi
+      # ansible_password: "1111"
+      # ansible_become_user: ansi
+      # ansible_become_pass: "1111"
