--- a/playbook/inventory/prod.yml
+++ b/playbook/inventory/prod.yml
@@ -4,6 +4,7 @@ clickhouse:
   hosts:
     clickhouse-01:
       ansible_host: 192.168.1.202
+      # ansible_ssh_private_key_file: /home/vagrant/.ssh/id_ed25519.pub
       # ansible_user: ansi
       # ansible_password: "1111"
       # ansible_become_user: ansi
@@ -12,6 +13,7 @@ vector:
   hosts:
     vector-01:
       ansible_host: 192.168.1.202
+      # ansible_ssh_private_key_file: /home/vagrant/.ssh/id_ed25519.pub
       # ansible_user: ansi
       # ansible_password: "1111"
       # ansible_become_user: ansi
